--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <ul class="scl_nav_ul">
                     <li class="scl_nav_items"> <i class="fab fa-facebook"></i>
                     </li>
-                    <li class="scl_nav_items"><img class="svg" src="static/fiverr-1.svg" alt="">
+                    <li class="scl_nav_items"><a href="https://www.fiverr.com/s2/aea854555a"><img class="svg" src="static/fiverr-1.svg" alt=""></a>
                     </li>
                     <li class="scl_nav_items">
                         <img class="svg" src="static/freelancer-1.svg" alt="">
