--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img id="coding_img" src="static/omar-tursic-7VLi-joP750-unsplash.jpg" alt="" srcset="">
         </div>
     </div>
-    <div class="loader">
+    <div class="loader" id='loader'>
         <div class="center">
             <span class="dot dot-1">L</span>
             <span class="dot dot-2">O</span>
