--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/eb3ac9fd91.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="onloads()">
     <style type="text/css">
         .ldBar path.mainline {
           stroke-width: 10;
